fixed gif stretching

--- a/my-app/src/components/AboutMe/AboutMe.css
+++ b/my-app/src/components/AboutMe/AboutMe.css
@@ -64,7 +64,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     overflow: hidden;
     color: white;
@@ -105,12 +105,13 @@
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 25px;
     padding: 5px;
-    min-height: 67vh;
+    max-height: 67vh;
+    padding: 25px;
 }
 
 .SelfImage {
     border-radius: 50vh;
-    width: 33.75vw;
-    height: 67.52401280683031vh;
+    width: 35%;
+    height: 35%;
     border: 3px solid black;
 }
