--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -14,7 +14,7 @@ body {
 }
 
 :root {
-    font-size: .85vw;
+    font-size: 0.8vw;
 }
 
 #root {
@@ -97,6 +97,12 @@ body {
     height: 100vh;
     width: 100vw;
     z-index: -1;
-    position: absolute;
-    top: 0;
+}
+
+@media screen and (min-height: 1080px) {
+    .BackgroundImage {
+        height: 1250px;
+        width: 100vw;
+        z-index: -1;
+    }
 }
